Bug 245597 (for (pkasting@google.com) r=darin sr=bz Keyword search should be activated for anything that isn't parseable as a URI